# QT_QML_Home_App

./: CMakeLists.txt  Main.qml  MainArea.qml  application.cpp  application.h  fpstext.cpp  fpstext.h  main.cpp  qml.qrc  style.qml
components/: PrefsLabel.qml
